{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 36,
  "lineage": "05702c59-2d0e-3d50-0072-0457316e3972",
  "resources": [
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793805163219:vpc/vpc-0cbd7ba556eff6982",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0213cee36d9930995",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0da76455d7c9e8d56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbd7ba556eff6982",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017947e07e1bea89d",
            "owner_id": "793805163219"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:793805163219:loadbalancer/app/iot-edge-alb/d647a6dfdd1581bd",
            "arn_suffix": "app/iot-edge-alb/d647a6dfdd1581bd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "iot-edge-alb-1845030568.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:793805163219:loadbalancer/app/iot-edge-alb/d647a6dfdd1581bd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iot-edge-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08927cb7e99df5d1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005fc6abf08047dc3"
              },
              {
                "subnet_id": "subnet-0152b60616f793319"
              },
              {
                "subnet_id": "subnet-070f11845e6e93055"
              },
              {
                "subnet_id": "subnet-0d4fa2f11de0f7999"
              },
              {
                "subnet_id": "subnet-0ea07be7d85893e1c"
              },
              {
                "subnet_id": "subnet-0ecaa869547b671d2"
              }
            ],
            "subnets": [
              "subnet-005fc6abf08047dc3",
              "subnet-0152b60616f793319",
              "subnet-070f11845e6e93055",
              "subnet-0d4fa2f11de0f7999",
              "subnet-0ea07be7d85893e1c",
              "subnet-0ecaa869547b671d2"
            ],
            "tags": {
              "Environment": "lab",
              "Name": "iot-edge-alb"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "iot-edge-alb"
            },
            "vpc_id": "vpc-0cbd7ba556eff6982",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:793805163219:listener/app/iot-edge-alb/d647a6dfdd1581bd/0ab229ae387c3917",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:793805163219:targetgroup/iot-edge-tg/9cde337fbacd0561",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:793805163219:listener/app/iot-edge-alb/d647a6dfdd1581bd/0ab229ae387c3917",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:793805163219:loadbalancer/app/iot-edge-alb/d647a6dfdd1581bd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_lb.main",
            "module.networking.aws_lb_target_group.app",
            "module.networking.aws_security_group.alb",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:793805163219:targetgroup/iot-edge-tg/9cde337fbacd0561",
            "arn_suffix": "targetgroup/iot-edge-tg/9cde337fbacd0561",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:793805163219:targetgroup/iot-edge-tg/9cde337fbacd0561",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "iot-edge-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "lab",
              "Name": "iot-edge-tg"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "iot-edge-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cbd7ba556eff6982"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793805163219:security-group/sg-08927cb7e99df5d1c",
            "description": "Security group para el Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08927cb7e99df5d1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iot-edge-alb-sg",
            "name_prefix": "",
            "owner_id": "793805163219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "Name": "iot-edge-alb-sg"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "iot-edge-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd7ba556eff6982"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793805163219:security-group/sg-0d34c6d1965fbb484",
            "description": "Security group para las tareas ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d34c6d1965fbb484",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP desde el ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08927cb7e99df5d1c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iot-edge-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "793805163219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "Name": "iot-edge-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "iot-edge-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd7ba556eff6982"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793805163219:security-group/sg-0d022fd465edb37b0",
            "description": "Postgres access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d022fd465edb37b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "iot-postgres-sg",
            "name_prefix": "",
            "owner_id": "793805163219",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbd7ba556eff6982"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}